applications/kubernetes/authentik/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-internal
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`auth.eggenberg.io`)
    kind: Rule
    services:
    - name: minio
      port: 80
  tls:
    secretName: authentik-certificate-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-public
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`auth.eggenberg.io`)
    kind: Rule
    services:
    - name: minio
      port: 80
  tls:
    secretName: authentik-certificate-secret
